--- a/index-old.html
+++ b/index-old.html
@@ -9,12 +9,11 @@
       and 'Jost', used for the body -->
   <link href="https://fonts.googleapis.com/css2?family=Jost&family=Inspiration&display=swap" rel="stylesheet">
 
-
-
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-old.css">
 </head>
 
 <body>
+  
   <header>
     <div class="text-above-title">
       <p>Step right up!</p>
@@ -84,6 +83,6 @@
 
 <!-- Link to the Font Awesome page for the restart icon -->
 <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
-<script src="scripts.js"></script>
+<script src="scripts-old.js"></script>
 </body>
 </html>
