--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test Your Memory!</title>
 
+  <link rel="stylesheet" href="css-reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,6 +21,11 @@
       <h1>Memory</h1>
 
     </header> 
+
+    <main>
+
+    </main>
+    <button class="play-button">START</button>
   </div>
   
 </body>
