adding back main page components

--- a/index.html
+++ b/index.html
@@ -23,10 +23,41 @@
     </header> 
 
     <main>
+      <button class="play-button">START</button>
 
+      <div class="level-selector-container">
+        <p class="selector-text">CHOOSE YOUR FATE</p>
+          <div class="level-choices">
+            <div class="easy-mode">
+  
+              <div class="level-button easy-button">
+                <img src="images/4x/onestarhover.png" class="only-hover">
+                <img src="images/4x/onestar.png" class="main-level-button">
+              </div>
+              <span class="best-easy-time"></span>
+  
+            </div>
+      
+            <div class="medium-mode">
+              <div class="level-button medium-button">
+                <img src="images/4x/twostarhover.png" class="only-hover">
+                <img src="images/4x/twostar.png" class="main-level-button">
+              </div>
+              <span class="best-medium-time"></span>
+            </div>
+      
+            <div class="hard-mode">
+              <div class="level-button hard-button">
+                <img src="images/4x/threestarhover.png" class="only-hover">
+                <img src="images/4x/threestar.png" class="main-level-button">
+              </div>
+              <span class="best-hard-time"></span>
+          </div>
+          </div>
+      </div>
     </main>
-    <button class="play-button">START</button>
   </div>
   
+  <script src="scripts.js"></script>
 </body>
 </html>
