made cards flippable

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="easy-mode">
 
               <div class="level-button easy-button">
-                <div class="level-card">
+                <div class="card">
                   <img src="images/4x/onestar.png" class="front">
                   <img src="images/4x/onestarhover.png" class="back">
                 </div>
@@ -40,7 +40,7 @@
       
             <div class="medium-mode">
               <div class="level-button medium-button">
-                <div class="level-card">
+                <div class="card">
                   <img src="images/4x/twostar.png" class="front">
                   <img src="images/4x/twostarhover.png" class="back">
                 </div>
@@ -51,7 +51,7 @@
             <div class="hard-mode">
               <div class="level-button hard-button">
 
-                <div class="level-card">
+                <div class="card">
                   <img src="images/4x/threestar.png" class="front">
                   <img src="images/4x/threestarhover.png" class="back">
                 </div>
