--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test Your Memory!</title>
 
-  <link rel="stylesheet" href="css-reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/css-reset.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -63,12 +63,12 @@
       </div>
 
       <div class="grid-container">
-        <div class="score-card">
-          <span id="levelDisplay" class="level-display"></span>
+        <div class="score-container">
+          <span id="levelDisplay"></span>
           <span id="scoreDisplay"></span>
           <span id="timeDisplay"></span>
           <span id="moveDisplay"></span>
-          <!-- <i class="fa-solid fa-rotate-left restart-button"></i> -->
+          <i class="fa-solid fa-rotate-left restart-button"></i>
         </div>
     
         <div class="grid"></div>
@@ -81,6 +81,8 @@
   </div>
 
   <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
-  <script src="scripts.js"></script>
+
+  <script src="js/scripts.js"></script>
+  <script src="js/timer.js"></script>
 </body>
 </html>
