--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
   <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/handle-scores.js"></script>
+  <script src="js/starting-listeners.js"></script>
+  <script src="js/play.js"></script>
   <script src="js/timer.js"></script>
 </body>
 </html>
