--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <img src="images/4x/onestarhover.png" class="back">
                 </div>
               </div>
-              <span class="best-easy-time"></span>
+              <span class="best-easy-score"></span>
 
             </div>
       
@@ -45,7 +45,7 @@
                   <img src="images/4x/twostarhover.png" class="back">
                 </div>
               </div>
-              <span class="best-medium-time"></span>
+              <span class="best-medium-score"></span>
             </div>
       
             <div class="hard-mode">
@@ -57,7 +57,7 @@
                 </div>
 
               </div>
-              <span class="best-hard-time"></span>
+              <span class="best-hard-score"></span>
           </div>
           </div>
       </div>
