added text animation to win screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="play-button">START</button>
 
       <div class="level-selector-container">
-        <p class="selector-text">CHOOSE YOUR FATE</p>
+        <p class="selector-text">Choose your fate!</p>
           <div class="level-choices">
 
             <div class="easy-mode">
@@ -78,6 +78,11 @@
       <div class="win-display"></div>
 
     </main>
+
+    
+
+    <button id="cheatButton">cheat</button>
+    <button id="fullResetButton">fully reset</button>
   </div>
 
   <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
