fixing app for mobile

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
     
 
-    <button id="cheatButton">cheat</button>
-    <button id="fullResetButton">fully reset</button>
+    <!-- <button id="cheatButton">cheat</button>
+    <button id="fullResetButton">fully reset</button> -->
   </div>
 
   <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
