fixing responsive design

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
   <div class="outer-container">
     <header>
-      <div class="above-title">
-        <p>Step right up!</p>
-        <p>Test your</p>
+      <div class="header-text">
+        <div class="above-title">
+          <p>Step right up!</p>
+          <p>Test your</p>
+        </div>
+        <h1>Memory</h1>
       </div>
-      <h1>Memory</h1>
+      
+      <img src="../images/4x/bg.png" alt="">
     </header> 
 
     <main>
