Cleaning up javascript files

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
   <script src="https://kit.fontawesome.com/4a90a8143b.js" crossorigin="anonymous"></script>
-  <script src="js/handle-scores.js"></script>
+  <script src="js/score-handlers.js"></script>
   <script src="js/starting-listeners.js"></script>
   <script src="js/play.js"></script>
   <script src="js/timer.js"></script>
