fixing header img issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Memory</h1>
       </div>
       
-      <img src="../images/bg.png" alt="Header Image">
+      <img src="images/bg.png" alt="Header Image">
     </header> 
 
     <main>
